// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core.public.importGraph exports 1`] = `[Function]`;

exports[`core.public.importGraph importGraph works with right arguments 1`] = `
Object {
  "edges": Object {
    "1_2": Object {
      "edgeData": Object {},
      "edgeID": "1_2",
      "sourceID": 1,
      "targetID": 2,
    },
    "2_3": Object {
      "edgeData": Object {},
      "edgeID": "2_3",
      "sourceID": 2,
      "targetID": 3,
    },
    "2_4": Object {
      "edgeData": Object {},
      "edgeID": "2_4",
      "sourceID": 2,
      "targetID": 4,
    },
  },
  "nodes": Object {
    "1": Object {
      "nodeData": 1,
      "nodeID": 1,
      "possibleTargets": Array [
        2,
      ],
    },
    "2": Object {
      "nodeData": 2,
      "nodeID": 2,
      "possibleSources": Array [
        1,
      ],
      "possibleTargets": Array [
        3,
        4,
      ],
    },
    "3": Object {
      "nodeData": 3,
      "nodeID": 3,
      "possibleSources": Array [
        2,
      ],
      "possibleTargets": Array [],
    },
    "4": Object {
      "nodeData": 4,
      "nodeID": 4,
      "possibleSources": Array [
        2,
      ],
      "possibleTargets": Array [],
    },
    "5": Object {
      "nodeData": 5,
      "nodeID": 5,
      "possibleTargets": Array [],
    },
  },
}
`;

exports[`core.public.importGraph importGraph works without reducers in right format 1`] = `
Object {
  "edges": Object {
    "1_2": Object {
      "edgeData": Object {},
      "edgeID": "1_2",
      "sourceID": 1,
      "targetID": 2,
    },
    "2_3": Object {
      "edgeData": Object {},
      "edgeID": "2_3",
      "sourceID": 2,
      "targetID": 3,
    },
    "2_4": Object {
      "edgeData": Object {},
      "edgeID": "2_4",
      "sourceID": 2,
      "targetID": 4,
    },
  },
  "nodes": Object {
    "1": Object {
      "nodeData": 1,
      "nodeID": 1,
      "possibleTargets": Array [
        2,
      ],
    },
    "2": Object {
      "nodeData": 2,
      "nodeID": 2,
      "possibleSources": Array [
        1,
      ],
      "possibleTargets": Array [
        3,
        4,
      ],
    },
    "3": Object {
      "nodeData": 3,
      "nodeID": 3,
      "possibleSources": Array [
        2,
      ],
      "possibleTargets": Array [],
    },
    "4": Object {
      "nodeData": 4,
      "nodeID": 4,
      "possibleSources": Array [
        2,
      ],
      "possibleTargets": Array [],
    },
    "5": Object {
      "nodeData": 5,
      "nodeID": 5,
      "possibleTargets": Array [],
    },
    "[object Object]": Object {
      "nodeData": Object {
        "nodeID": 1,
      },
      "nodeID": Object {
        "nodeID": 1,
      },
      "possibleTargets": Array [],
    },
  },
}
`;
